# winkhouse3

./: .env  Cargo.toml  Dioxus.toml  README.md  package-lock.json  tailwind.config.js
data/: winkhouse3.db
migrations/2023-11-28-184308_create_agenti/: down.sql  up.sql
migrations/2023-11-29-193214_create_tipologie_immobili/: down.sql  up.sql
migrations/2023-11-29-193237_create_stati_conservativi/: down.sql  up.sql
migrations/2023-11-29-193254_create_classi_energetiche/: down.sql  up.sql
migrations/2023-11-29-193304_create_riscaldamenti/: down.sql  up.sql
migrations/2023-11-29-193316_create_tipologie_stanze/: down.sql  up.sql
migrations/2023-11-29-193402_create_categorie_cliente/: down.sql  up.sql
migrations/2023-11-29-193417_create_tipologie_contatti/: down.sql  up.sql
migrations/2023-12-04-191825_create_anagrafiche/: down.sql  up.sql
migrations/2023-12-04-194143_create_contatti/: down.sql  up.sql
migrations/2023-12-04-195127_create_immobili/: down.sql  up.sql
migrations/2023-12-06-061637_create_immobiliproprietari/: down.sql  up.sql
migrations/2023-12-06-063112_create_stanze/: down.sql  up.sql
migrations/2023-12-06-181550_create_colloqui/: down.sql  up.sql
migrations/2023-12-06-182312_create_colloqui_agenti/: down.sql  up.sql
migrations/2023-12-06-182319_create_colloqui_anagrafiche/: down.sql  up.sql
public/: tailwind.css
src/: main.rs
src/components/: mainwin.rs  mod.rs  navbar.rs
src/components/anagrafiche/: anagrafica.rs  anagrafiche.rs  findbar.rs  mod.rs
src/dao/: models.rs  schema.rs
static/index/: 65551c6f.html
(+27 files in other folders)
