[package]
name = "winkhouse3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0" 
dioxus-fullstack = { version = "0.4.1", features = ["router"]}
dioxus-router = "0.4.1"
serde = "1.0.189"
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"

[features]
default = []
ssr = ["dioxus-fullstack/axum"]
web = ["dioxus-fullstack/web"]
